<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home"
        android:title="@string/title_home" />
    <item
        android:id="@+id/navigation_notification"
        android:icon="@drawable/ic_bell"
        android:title="@string/title_notification" />
    <item
        android:id="@+id/navigation_add_product"
        android:icon="@drawable/ic_plus_circle"
        android:title="@string/title_add_product" />
    <item
        android:id="@+id/navigation_sell_list"
        android:icon="@drawable/ic_list"
        android:title="@string/title_sell_list" />
    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_user"
        android:title="@string/title_account" />
</menu>