<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingHorizontal="16dp">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/iv_product_image"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:scaleType="centerCrop"
        android:theme="@style/ShapeAppearanceOverlay.App.CornerSize.12"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_launcher_background" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_product_status"
        style="@style/Text.Secondary.12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:ellipsize="end"
        android:maxLines="1"
        android:text="@string/text_seller_order_bid_title"
        app:layout_constraintStart_toEndOf="@+id/iv_product_image"
        app:layout_constraintTop_toTopOf="@+id/iv_product_image" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_product_time"
        style="@style/Text.Secondary.10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:maxLines="1"
        android:text="@string/text_seller_order_transaction_date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/iv_product_image" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_product_name"
        style="@style/Text.Primary.14"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:ellipsize="end"
        android:maxLines="1"
        android:text="@string/text_seller_order_product_name"
        app:layout_constraintEnd_toStartOf="@+id/tv_product_time"
        app:layout_constraintStart_toEndOf="@+id/iv_product_image"
        app:layout_constraintTop_toBottomOf="@+id/tv_product_status" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_product_price"
        style="@style/Text.Primary.14"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:ellipsize="end"
        android:maxLines="1"
        android:text="@string/text_seller_order_base_price"
        app:layout_constraintEnd_toStartOf="@+id/tv_product_time"
        app:layout_constraintStart_toEndOf="@+id/iv_product_image"
        app:layout_constraintTop_toBottomOf="@+id/tv_product_name" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_product_bid"
        style="@style/Text.Primary.14"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginBottom="16dp"
        android:ellipsize="end"
        android:maxLines="1"
        android:text="@string/text_seller_order_bid_price"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/tv_product_time"
        app:layout_constraintStart_toEndOf="@+id/iv_product_image"
        app:layout_constraintTop_toBottomOf="@+id/tv_product_price" />

</androidx.constraintlayout.widget.ConstraintLayout>