<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:foreground="?android:attr/selectableItemBackground"
    android:padding="12dp">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/iv_product_read"
        android:layout_width="8dp"
        android:layout_height="8dp"
        android:background="@android:color/holo_red_light"
        android:theme="@style/ShapeAppearanceOverlay.App.Circle"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/tv_product_time"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_product_time"
        tools:visibility="visible" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/iv_product_image"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:scaleType="centerCrop"
        android:theme="@style/ShapeAppearanceOverlay.App.CornerSize.12"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_launcher_background" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_product_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:ellipsize="end"
        android:maxLines="1"
        android:text="@string/text_product_offer"
        android:textSize="10sp"
        app:layout_constraintStart_toEndOf="@+id/iv_product_image"
        app:layout_constraintTop_toTopOf="@+id/iv_product_image"
        tools:ignore="SmallSp" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_product_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:ellipsize="end"
        android:maxLines="1"
        android:text="@string/text_product_date"
        android:textSize="10sp"
        app:layout_constraintEnd_toStartOf="@+id/iv_product_read"
        app:layout_constraintTop_toTopOf="@+id/iv_product_image"
        tools:ignore="SmallSp" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_product_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:ellipsize="end"
        android:maxLines="1"
        android:text="@string/text_product_name"
        android:textColor="@android:color/black"
        app:layout_constraintEnd_toStartOf="@+id/tv_product_time"
        app:layout_constraintStart_toEndOf="@+id/iv_product_image"
        app:layout_constraintTop_toBottomOf="@+id/tv_product_status" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_product_price"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:maxLines="1"
        android:text="@string/text_product_price"
        android:textColor="@android:color/black"
        app:layout_constraintEnd_toEndOf="@+id/tv_product_name"
        app:layout_constraintStart_toStartOf="@+id/tv_product_name"
        app:layout_constraintTop_toBottomOf="@+id/tv_product_name" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_product_bid"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:maxLines="1"
        android:text="@string/text_product_bid"
        android:textColor="@android:color/black"
        app:layout_constraintEnd_toEndOf="@+id/tv_product_name"
        app:layout_constraintStart_toStartOf="@+id/tv_product_name"
        app:layout_constraintTop_toBottomOf="@+id/tv_product_price" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_desc"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginBottom="4dp"
        android:text="@string/text_contact"
        android:textSize="12sp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/iv_product_image"
        app:layout_constraintTop_toBottomOf="@+id/tv_product_bid"
        tools:visibility="visible" />

</androidx.constraintlayout.widget.ConstraintLayout>